Clean up index.html source

--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 
+<!-- Lidi, co čtou zdrojáky, jsou sexy! -->
+
 <!--
-  Copyright (c) 2015, <your name>. All rights reserved. Use of this source code
+  Copyright (c) 2015, Filip Hracek. All rights reserved. Use of this source code
   is governed by a BSD-style license that can be found in the LICENSE file.
 -->
 
@@ -11,6 +13,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="scaffolded-by" content="https://github.com/google/stagehand">
+
   <title>Filipův ksicht</title>
 
   <!-- Add to homescreen for Chrome on Android -->
@@ -35,11 +38,9 @@
   <script async src="main.dart.js"></script>
   <!-- #end_dart_concat -->
 
-  <!--<script async src="main.dart" type="application/dart"></script>-->
-  <!--<script async data-pub-inline src="packages/browser/dart.js"></script>-->
-
   <!-- CSS -->
   <!--<link rel="stylesheet" href="styles/main.css">-->
+  <!-- Inlining CSS for the benefit of slow connections. We don't want to show a blank page. -->
   <style>
     @font-face {
       font-family: 'Kalam';
@@ -112,6 +113,9 @@
           <li><a href="https://www.dartlang.org/">Dart</a> (důvod, proč je zdroják čitelný a nemá callback hell i přes značnou míru asynchronie)</li>
           <li><a href="https://github.com/filiph/service_worker_helper/">Kód této stránky</a> (na githubu)</li>
         </ul>
+        <p>Pokud vás zajímají pokročilé technologie na webu obecně, podívejte se ještě na moji
+          <a href="http://filiph.net/eshop-ai/">umělou inteligenci</a> nebo
+          <a href="http://filiph.net/fuzzy/">fuzzy logiku</a> pro weby.</p>
         <p class="signature">
           &mdash; Filip Hráček<br/>
           <a rel="author" href="https://plus.google.com/u/0/+filiphracek/posts">Google+</a> // <a href="https://twitter.com/filiphracek">Twitter</a>
