Animate loading so that users know there is more coming

--- a/web/index.html
+++ b/web/index.html
@@ -68,7 +68,7 @@
       <div id="filip-says">
         <div id="filip-message-wrap">
           <div id="filip-message-bubble">
-            <h2 id="filip-message">&hellip;</h2>
+            <h2 id="filip-message"><img alt="..." src="images/loader.gif"></h2>
           </div>
           <div id="switch-container">
             <label for="push-permission-switch" class="mdl-switch mdl-js-switch mdl-js-ripple-effect">
@@ -112,6 +112,7 @@
           <li><a href="https://www.firebase.com/">Firebase</a> (důvod, proč se hláška i počet odběratelů updatují v reálném čase)</li>
           <li><a href="https://www.dartlang.org/">Dart</a> (důvod, proč je zdroják čitelný a nemá callback hell i přes značnou míru asynchronie)</li>
           <li><a href="https://github.com/filiph/service_worker_helper/">Kód této stránky</a> (na githubu)</li>
+          <li><a href="https://docs.google.com/presentation/d/1MwVJvehNrL3t11ElvXB5ba9mGzFNoBmGRUNoCm1LWq0/edit?usp=sharing">Přednáška</a> (kvůli které tahle aplikace vznikla)</li>
         </ul>
         <p>Pokud vás zajímají pokročilé technologie na webu obecně, podívejte se ještě na moji
           <a href="http://filiph.net/eshop-ai/">umělou inteligenci</a> nebo
